Adds dropdown link to About users page and moves About us link to the same dropdown

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
   <!-- <div class="row">
   <div class="small-12 large-12 columns panel clearfix"> -->
   <div class="row panel">
-  <div class="medium-3 columns text-center">
+  <div class="medium-3 columns text-left">
     <div class="gravatar-body-left"><%= gravatar_for(user) %></div>
       <% if user.provider == "github" %>
         <p class="text-left"><i class="fa fa-github-square"></i> <%= link_to user.name, "https://github.com/#{user.name}" %><br>
