Updates kudo model and action view
  * Kudo model after_create method no longer sets a content value
  * Index updated to show the action type in addition to the action content

--- a/app/views/actions/index.html.erb
+++ b/app/views/actions/index.html.erb
@@ -5,7 +5,7 @@
     <% @actions.each do |action| %>
       <hr>
       <h4>
-        <%= action.content %>
+        <%= action.actionable_type + " - " + action.content %>
 
         <div class="gravatar-body"><%= gravatar_for(User.find(action.user_id)) %></div>
 
