--- a/app/assets/stylesheets/techtips.css
+++ b/app/assets/stylesheets/techtips.css
@@ -90,3 +90,10 @@ html .inactive {
    pointer-events: none;
    cursor: default;
 }
+
+html #tag_cloud {
+  line-height: 1.6em;
+  .s { font-size: 0.8em; }
+  .m { font-size: 1.2em; }
+  .l { font-size: 1.8em; }
+}
