Added hidden field to new comment form

--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -2,5 +2,6 @@
   <%= f.text_area :content, placeholder: "Your comment ... (Markdown with fenced code blocks supported)" %>
   <%= f.hidden_field :question_id, value: @question.id %>
   <%= f.hidden_field :answer_id, value: answer.id %>
+  <%= f.hidden_field :user_id, value: current_user.id %>
   <%= f.submit %>
 <% end %>
