--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,7 +8,7 @@
 </div>
 <div class="row panel">
 
-  <div class="large-3 columns text-center">
+  <div class="large-3 columns text-center add-bottom-padding">
 
     <h3>Jackie<br>Johnston</h3>
     <dt>Project Lead</dt>
@@ -22,7 +22,7 @@
 
   </div>
 
-  <div class="large-3 columns text-center">
+  <div class="large-3 columns text-center add-bottom-padding">
 
     <h3>Germain<br>Boué</h3>
     <dt>Growth Hacker</dt>
@@ -36,7 +36,7 @@
 
     </div>
 
-    <div class="large-3 columns text-center">
+    <div class="large-3 columns text-center add-bottom-padding">
 
       <h3>Drew<br>Parker</h3>
       <dt>General Developer</dt>
@@ -50,7 +50,7 @@
 
     </div>
 
-    <div class="large-3 columns text-center">
+    <div class="large-3 columns text-center add-bottom-padding">
 
       <h3>Mason<br>O'Neal</h3>
       <dt>Testing and Development</dt>
