--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,30 +1,19 @@
 <% content_for :title do %><%= @user.name %><% end %>
 <div class="row panel">
-  <!-- <div class="large-8 columns"> -->
   <div class="large-12 columns">
   <%= render partial: "layouts/alerts" %>
     <p>
     <h1>Interview Prep</h1>
     <h3>for <%= @user.name %></h3>
-  <p>Click the <i class="fa fa-floppy-o"></i> icon next to a question so that it will appear here for future reference.</p>
-  <p>Click the <i class="fa fa-eraser"></i> icon next to a question to remove it from your Interview Prep area.</p>
+    <p>Click the <i class="fa fa-floppy-o"></i> icon on the question's page so that a link will appear here for future reference.<br>
+    Click a <i class="fa fa-eraser"></i> icon in the list below to remove a question from your Interview Prep area.</p>
     <% if current_user.id == @user.id %>
       <% @user.favorites.each do |favorite| %>
-      <hr>
-      <div class="row">
-        <div class="small-12 large-12 columns">
-          <span data-tooltip class="has-tip" title="Click to erase favorite"><%= link_to favorite_path(question_id: favorite.favoritable.id, favorite_id: favorite.id), class: "fa fa-eraser", :id => "erase-link", method: :delete do %>
-          <% end %>
-          <%= link_to favorite.favoritable.title, question_path(favorite.favoritable) %><br>
-        </div>
-      </div>
+      <br>
+      <span data-tooltip class="has-tip" title="Click to erase favorite"><%= link_to favorite_path(question_id: favorite.favoritable.id, favorite_id: favorite.id), class: "fa fa-eraser", :id => "erase-link", method: :delete do %>
+        <% end %></span>
+      <span data-tooltip class="has-tip" title="Click to view question page"><%= link_to favorite.favoritable.title, question_path(favorite.favoritable) %></span><br>
       <% end %>
     <% end %>
   </div>
-<!--   <div class="large-4 columns panel">
-    <h3>My Activity Feed</h3>
-    <ul>
-      partial goes here
-    </ul>
-  </div>
-</div> -->
+</div>
