--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,24 +2,16 @@
 <div class="row">
   <div class="small-12 large-12 columns panel">
   <%= render partial: "layouts/alerts" %>
-
 <!-- shows the options to save/thumbsup questions if you are signed in all disabled -->
     <% if current_user %>
-
-    <%= render partial: "questions/logged" %>
-
-
+      <%= render partial: "questions/logged" %>
     <% else %>
-
-      <span data-tooltip class="has-tip" title="Sign-in to give this question a thumbs-up."><i class="fa fa-thumbs-up grey-out"></i>&nbsp;<%= @question.kudos.count %></span>&nbsp;&nbsp;&nbsp;
-      <span data-tooltip class="has-tip" title="Sign in to save this question to your interview prep area."><i class="fa fa-floppy-o grey-out"></i>&nbsp;<%= @question.favorites.count %></span>&nbsp;&nbsp;&nbsp;
-
+      <%= render partial: "questions/notlogged" %>
     <% end %>
     <span data-tooltip class="has-tip" title="Pageviews"><i class="fa fa-eye"></i>&nbsp;<%= @question.impressionist_count %></span><br><br>
 
-
     <h3><%= @question.title %>
-    <%= render partial: "questions/share" %></h3>
+      <%= render partial: "questions/share" %></h3>
     <hr>
 
     <p class="text-left">
@@ -27,7 +19,6 @@
         <span class="label"><%= raw @question.tag_list.map { |t| link_to t, tag_path(t) }.join('</span> <span class="label">') %></span>
       <% end %>
     </p>
-
 <!-- able to edit and delete if you are the current_user -->
     <% if current_user %>
       <% if current_user.id == @question.user.id %>
@@ -35,65 +26,39 @@
         <%= link_to "delete", question_path(@question), method: :delete, class: "button [tiny small large]" %></p>
       <% end %>
     <% end %>
-
 <!-- github information shows up whether you are logged in or not -->
-    <div class="gravatar-body"><%= gravatar_for(@question.user) %></div>
-    <% if @question.user.provider == "github" %>
-      <p class="text-right">Posted by: <i class="fa fa-github-square"></i> <%= link_to @question.user.name, "https://github.com/#{@question.user.name}" %><br>
-    <% else %>
-      <p class="text-right">Posted by: <i class="fa fa-linkedin-square"></i> <%= link_to @question.user.name, @question.user.url %><br>
-    <% end %>
-    <%= time_ago_in_words(@question.created_at) %> ago</p>
+     <%= render partial: "questions/gravatar", locals: { question: @question } %>
   </div>
 </div>
 
 <!-- log in to answer or render partial with choice to answer -->
 <div class="row">
   <div class="small-12 large-12 columns panel">
-<% if current_user %>
-<h3>Answer Question</h3>
-  <%= render partial: "answers/new", locals: { question: @question } %>
-<% else %>
-  <h3>Please log in to answer!</h3>
-<% end %>
+    <% if current_user %>
+      <h3>Answer Question</h3>
+        <%= render partial: "answers/new", locals: { question: @question } %>
+    <% else %>
+      <h3>Please log in to answer!</h3>
+    <% end %>
   </div>
 </div>
-
 <!-- display all the answers  -->
 <% @question.answers.each do |answer| %>
   <div class="row">
     <div class="small-12 large-12 columns panel clearfix">
-
 <!-- allows you to thumbs up if you are logged in -->
         <% if current_user %>
         <span id="<%= answer.id %>" data-tooltip class="has-tip" title="Give this answer a thumbs-up."><%= link_to kudos_path(question_id: @question.id, answer_id: answer.id), class: "fa fa-thumbs-up answer-thumbs-up", :remote => true, method: :post do %><% end %>&nbsp;<span class="answer-vote"><%= answer.kudos.count %></span></span>
         <% else %>
           <span data-tooltip class="has-tip" title="Sign-in to give this question a thumbs-up."><i class="fa fa-thumbs-up grey-out"></i>&nbsp;<%= answer.kudos.count %></span>
         <% end %>
-
-
-
 <!-- if you are logged in and are the current user of the answer then delete edit answer available -->
-      <p><%= markdown answer.content %></p>
-      <hr>
-      <% if current_user %>
-        <% if current_user.id == answer.user_id %>
-        <p class="text-right"><%= link_to "delete", answer_path(answer), method: :delete, class: "button [tiny small large]" %><p>
-        <% end %>
-      <% end %>
-      <div class="gravatar-body"><%= gravatar_for(answer.user) %></div>
-      <% if answer.user.provider == "github" %>
-        <p class="text-right">Posted by: <i class="fa fa-github-square"></i> <%= link_to answer.user.name, "https://github.com/#{answer.user.name}" %><br>
-      <% else %>
-        <p class="text-right">Posted by: <i class="fa fa-linkedin-square"></i> <%= link_to answer.user.name, answer.user.url %><br>
-      <% end %>
-      <%= time_ago_in_words(answer.created_at) %> ago</p>
+    <%= render partial: "answers/show", locals: { answer: answer } %>
       <% if current_user %>
     <%= render partial: "comments/new", locals: { question: @question, answer: answer } %>
       <% end %>
     <%= render partial: "comments/show", locals: { answer: answer } %>
     </div>
-
   </div>
 <% end %>
 
