--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,14 +32,18 @@
           <li class="has-form">
             <div class="row collapse">
               <form action="/questions" method="get">
-                <div class="large-8 small-9 columns" "margin-right:0;">
+                <div class="large-8 small-9 columns" style="padding-right: 1px">
                   <%= text_field_tag :search, params[:search], placeholder: "Find Questions" %>
                 </div>
-                <div class="large-4 small-3 columns" style="margin-left:0;">
+                <div class="large-4 small-3 columns" style="padding-left: 5px">
                   <%= submit_tag "Search", :name => nil, class: "alert button expand" %>
                 </div>
               </form>
             </div>
+
+<!-- test  "margin-right:0;"  35
+ style="margin-left:0;"  38-->
+
           </li>
           <li class="has-dropdown">
             <a href="#">Categories</a>
