--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -33,13 +33,19 @@
 <div class="row">
   <div class="small-12 large-12 columns panel">
     <% if current_user %>
-      <h3>Answer Question</h3>
+      <a href="#" data-reveal-id="answerModal" class="button [tiny small large]">Answer Question</a>
+      <div id="answerModal" class="reveal-modal small" data-reveal>
+        <h3>Answer Question</h3>
         <%= render partial: "answers/new", locals: { question: @question } %>
+        <a class="close-reveal-modal">&#215;</a>
+      </div>
     <% else %>
       <h3>Please log in to answer!</h3>
     <% end %>
   </div>
 </div>
+
+
 
 <% @question.answers.each do |answer| %>
   <%= render partial: "answers/show", locals: { answer: answer } %>
