--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -21,8 +21,8 @@
 
     <% if current_user %>
       <% if current_user.id == @question.user.id %>
-      <p class="text-right"><%= link_to "edit", edit_question_path(@question), class: "button [tiny small large]" %>
-        <%= link_to "delete", question_path(@question), method: :delete, class: "button [tiny small large]" %></p>
+      <p class="text-right"><%= link_to "Edit", edit_question_path(@question), class: "button [tiny small large]" %>
+        <%= link_to "Delete", question_path(@question), method: :delete, class: "button [tiny small large]" %></p>
       <% end %>
     <% end %>
 
@@ -34,21 +34,19 @@
   <div class="small-12 large-12 columns panel">
     <% if current_user %>
       <a href="#" data-reveal-id="answerModal" class="button [tiny small large]">Answer Question</a>
-      <div id="answerModal" class="reveal-modal small" data-reveal>
-        <h3>Answer Question</h3>
-        <%= render partial: "answers/new", locals: { question: @question } %>
-        <a class="close-reveal-modal">&#215;</a>
-      </div>
     <% else %>
       <h3>Please log in to answer!</h3>
     <% end %>
   </div>
 </div>
 
-
+<div id="answerModal" class="reveal-modal small" data-reveal>
+  <h3>Answer Question</h3>
+  <%= render partial: "answers/new", locals: { question: @question } %>
+  <a class="close-reveal-modal">&#215;</a>
+</div>
 
 <% @question.answers.each do |answer| %>
   <%= render partial: "answers/show", locals: { answer: answer } %>
 <% end %>
-
 
