--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -31,7 +31,7 @@
 </div>
 
 <div class="row">
-  <div class="small-12 large-12 columns panel">
+  <div class="small-12 large-12 columns">
     <% if current_user %>
       <a href="#" data-reveal-id="answerModal" class="button [tiny small large]">Answer Question</a>
     <% else %>
