Moved the answerquestion, login links to flash-notice

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,7 +80,7 @@
             <a href="#">Sign in</a>
             <ul class="dropdown">
               <li id="github"><%= link_to "Using GitHub", "/auth/github" %></li>
-              <li><%= link_to "Using Linked-In", "/auth/linkedin" %></li>
+              <li><%= link_to "Using LinkedIn", "/auth/linkedin" %></li>
             </ul>
           <% end %>
         </ul>
