Changes to about page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,5 +93,6 @@
     <%= yield %>
 
     <%= javascript_include_tag "application" %>
+<!--     <div><p>This is an Open Source project. To learn more, please visit <a href="https://github.com/jackiejohnston/tech-interview-tips/">its GitHub repo</a>.</p></div> -->
   </body>
 </html>
