--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,12 +1,9 @@
 <% content_for :title do %>Tech Interview Tips: About Us<% end %>
-<div class="row">
-  <div class="small-12 large-12 columns panel">
-    <h1>Our Team</h1>
-    <p>This website was built as our <a href="http://www.devbootcamp.com">Dev Bootcamp</a> final project.</p>
-    <p>If interested in 3rd party development, feel free to use the information provided to you via <a href="http://www.techinterview.tips/api/questions">our API</a>. If you want to see the information nicely formatted, you can use a Chrome extension such as <a href="https://chrome.google.com/webstore/detail/jsonview/chklaanhfefbnpoihckbnefhakgolnmc">JSONView.</a></p>
-  </div>
-</div>
 <div class="row panel">
+<div class="small-12 large-12 columns">
+  <h1>Original Team</h1>
+  <p>This website was originally created as our <a href="http://www.devbootcamp.com">Dev Bootcamp</a> final project.</p>
+</div>
 
   <div class="large-3 columns text-center add-bottom-padding">
 
@@ -53,13 +50,16 @@
     <div class="large-3 columns text-center add-bottom-padding">
 
       <h3>Mason<br>O'Neal</h3>
-      <dt>Testing and Development</dt>
+      <dt>Testing & Development</dt>
       <img class="gravatar-round" alt="Mason O’Neal" src="https://secure.gravatar.com/avatar/e294f258d2740acc74d52d1dd2974186.png?r=PG&amp;d=mm&amp;s=100" title="Mason O'Neal" />
 
       <dd><a href="https://github.com/MasonONeal" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
 
       <a href="https://twitter.com/MasONeal" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></dd>
 
+  </div>
+  <div class="small-12 large-12 columns">
+    <p>This is now an Open Source project. To learn more, please visit <a href="https://github.com/jackiejohnston/tech-interview-tips/">its GitHub repo</a>. We also provide limited access to information on this site via <a href="http://www.techinterview.tips/api/questions">our API</a> if you would like to use it on your own website. (Note: If you want to see the information nicely formatted, you can use a Chrome extension such as <a href="https://chrome.google.com/webstore/detail/jsonview/chklaanhfefbnpoihckbnefhakgolnmc">JSONView.</a>)</p>
   </div>
 
 </div>
