Changes to about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -59,7 +59,7 @@
 
   </div>
   <div class="small-12 large-12 columns">
-    <p>This is now an Open Source project. To learn more, please visit <a href="https://github.com/jackiejohnston/tech-interview-tips/">its GitHub repo</a>. We also provide limited access to information on this site via <a href="http://www.techinterview.tips/api/questions">our API</a> if you would like to use it on your own website. (Note: If you want to see the information nicely formatted, you can use a Chrome extension such as <a href="https://chrome.google.com/webstore/detail/jsonview/chklaanhfefbnpoihckbnefhakgolnmc">JSONView.</a>)</p>
+  <p>This is now an Open Source project. To learn more, please visit <a href="https://github.com/jackiejohnston/tech-interview-tips/">its GitHub repo</a>. We also provide limited access to information on this site via <a href="http://www.techinterview.tips/api/questions">our API</a> if you would like to use it on your own website. (Note: If you want to see the information nicely formatted, you can use a Chrome extension such as <a href="https://chrome.google.com/webstore/detail/jsonview/chklaanhfefbnpoihckbnefhakgolnmc">JSONView.</a>) There is also an <a href="/actions">Activity Feed</a> available.</p>
   </div>
 
 </div>
