--- a/app/assets/stylesheets/code_line_numbering.css
+++ b/app/assets/stylesheets/code_line_numbering.css
@@ -2,7 +2,7 @@ pre {
     counter-reset: line-numbering;
     border: solid 1px #d9d9d9;
     border-radius: 0;
-    background: #fff;
+    /*background: #fff;*/
     padding: 0;
     line-height: 23px;
     margin-bottom: 30px;
@@ -18,10 +18,10 @@ pre a::before {
     padding-right: 1em; /* space after numbers */
     width: 3em;
     text-align: right;
-    opacity: 0.7;
+    opacity: 0.2;
     display: inline-block;
-    color: #aaa;
-    background: #eee;
+    color: #000000;
+    background: #ffffff;
     margin-right: 16px;
     padding: 2px 10px;
     font-size: 13px;
